Sun Apr  2 15:31:51 CEST 2006  Christian Persch <chpe@gnome.org>

	* data/setup-dialog.glade:
	  - Reduce first launch dialog size. (#336923)

Sat Apr  1 16:29:31 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/common/outbound.c:
	* src/common/servlist.c:
	* src/common/util.c:
	* src/common/servlist.h:
	* src/common/cfgfiles.c:
	* src/common/util.h:
	* src/common/text.c:
	* src/common/cfgfiles.h:
	* src/common/dcc.c:
	* src/common/dcc.h:
	* src/common/url.c:
	* src/common/modes.c:
	* src/common/xchat.c:
	* src/common/notify.c:
	* src/common/CVS/Entries:
	* src/common/xchat.h:
	* src/common/ignore.c:
	* src/common/ctcp.c:
	  - Sync from xchat cvs

Wed Mar 29 19:13:23 MST 2006  Brian Pepple <bdpepple@ameritech.net>

	* src/fe-gnome/gui.c:
	* data/Makefile.am:
	* src/fe-gnome/about.c:
	- Use icon theme specification.

Sun Mar 26 13:38:41 MST 2006  Christian Persch <chpe@gnome.org>

	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/gui.h:
	  - Fix some problems in GnomeProgram & GOption usage (#336108)

Sun Mar 26 13:26:24 MST 2006  Christian Persch <chpe@gnome.org>

	* src/fe-gnome/gui.h:
	* src/fe-gnome/about.c:
	  - Fix the about dialog to work with gtk+ changes related to #333360
	    (#336107)

Wed Mar 22 15:49:51 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	D data/xchat-gnome.desktop.in:
	A data/xchat-gnome.desktop.in.in:
	  - Add X-GNOME-Bugzilla-Version field to .desktop file.

Wed Mar 22 22:53:20 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* data/xchat-gnome.desktop.in:
	  - Apply Vincent Fretin's suggestions about the desktop file.
	    Remove the extension of the icon key. Add GNOME, GTK and IRCClient
	    as categories. Set general as default component for the bugzilla.

Tue Mar 21 22:51:04 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/main-window.c:
	  - Disable bans list in the channel popup menu because this is not yet
	    implemented.

Fri Mar 17 20:11:44 MST 2006  David Trowbridge <trowbrds@gmail.com>
